--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,10 @@ transition: background-color 0.3s ease;
   display: none;
  }
 
+ .footer-box-dscr {
+  display: none;
+ }
+
 
   /* ---------------------------------СЕКЦИЯ УСЛУГИ------------------------------- */
   .service-section {
@@ -952,15 +956,18 @@ color: black;
 }
 
 .crm-btn {
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 8px;
-  padding: 42px 80px;
 background: #efa201;
 font-weight: 600;
 font-size: 16px;
 line-height: 100%;
 text-align: center;
 color: black;
-display: block;
+
 margin: 0 auto;
 }
 
@@ -1308,6 +1315,53 @@ font-weight: 400;
 font-size: 5px;
 line-height: 120%;
 color: #d8d8d8;
+}
+
+/* Ноутбуки +  ФУТЕР */
+
+@media screen and (min-width: 1281px) {
+
+.section-footer {
+  padding: 144px 0 150px 0;
+}
+
+
+
+  .contact-footer-list{
+    flex-direction: ;
+   flex-direction: row;
+   max-width: 545px;
+   flex-wrap: wrap;
+  }
+
+  .logo-footer {
+    width: 469px;
+height: 195px;
+min-width: 451px;
+
+right: 0;
+  }
+
+  .footer-dscr {
+    display: block;
+
+    font-family: var(--font-family);
+font-weight: 400;
+font-size: 16px;
+line-height: 120%;
+color: var(--f9f2e5);
+width: 460px;
+  }
+
+ .logo-position {
+  display: flex;
+  flex-direction: column;
+  gap: 65px;
+  position: absolute;
+
+  right: 10%;
+ }
+
 }
 
 /* -------------------------------------///ФУТЕР--------------------------------------------------------- */
