--- a/styles.css
+++ b/styles.css
@@ -1089,9 +1089,8 @@ border: none;
 .form-btn {
   border-radius: 12px;
   padding: 32px;
- 
-  width: 375px;
-  height: 93px;
+ width: 100%;
+
   background: black;
 margin: 16px auto 0;
 font-weight: 600;
