--- a/styles.css
+++ b/styles.css
@@ -420,6 +420,7 @@ font-size: 16px;
 
 
 .section-spivpracia {
+  padding-top: 29px;
   position: relative;
   overflow: hidden;
   background-color: black;
