--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ background-clip: text;
 
   .subtitle-hero-text {
     position: relative;
-    font-family:'Roboto';
+    font-family: "Roboto", sans-serif;
     text-align: center;
   margin: 260px auto 32px;
 line-height: 115%;
