--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ transition: background-color 0.3s ease;
   border-radius: 8px;
 padding: 10px 0 10px 20px;
 width: 100%;
-min-height: 75px;
+min-height: 100px;
 background-color: #efa201;
 
 position: relative;
@@ -242,10 +242,11 @@ transition: border-radius 0.3s;
 
 .service-description {
   max-height: 0;
+  margin-bottom: 10px;
   overflow: hidden;
   transition: max-height 0.4s ease, padding 0.4s ease;
   padding: 0 20px; /* добавим боковые отступы сразу */
-width: 320px;
+width: 100%;
   border-radius: 0 0 8px 8px;
   color: #333;
   font-size: 14px;
@@ -259,8 +260,6 @@ width: 320px;
 }
 .service-wrapper.expanded .service-card {
   border-radius: 8px 8px 0 0;
-  background-color:#d18b01;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.);
 }
 
 .service-card::after {
