--- a/styles.css
+++ b/styles.css
@@ -302,11 +302,12 @@ padding: 30px 0;
   padding-top: 24px;
   display: flex;
   flex-direction: column;
- 
 }
 
-.o-nas-picture {
 
+.o-nas-picture {
+ margin: 0 auto;
+width: 100%;
 }
 
 .o-nas-dscr{
