--- a/styles.css
+++ b/styles.css
@@ -454,7 +454,7 @@ width: 100%;
 
 
 .section-spivpracia {
-  padding-top: 29px;
+  padding: 60px 0;
   position: relative;
   overflow: hidden;
   background-color: black;
@@ -493,12 +493,12 @@ padding: 22px 0 63px 0;
 }
 
 .spivpracia-container {
-  padding: 30px 40px 60px 40px;
+  padding: 30px 40px 0 40px;
 }
 
 .subtitle-spivpracia {
 font-weight: 700;
-font-size: 32px;
+font-size: 24px;
 line-height: 100%;
 color: white;
 }
@@ -572,13 +572,13 @@ color: white;
 
 .spivpracia-list-item {
   width: 160px;
-  height: 108px;
+
   
 }
 
 .spivpracia-dscr {
 font-weight: 600;
-font-size: 13px;
+font-size: 14px;
 line-height: 140%;
 color:white;
 }
@@ -591,8 +591,8 @@ background: #efa201;
 
 
 font-weight: 600;
-font-size: 15px;
-line-height: 100%;
+font-size: 16px;
+line-height: 150%;
 text-align: center;
 color: black;
 }
@@ -780,34 +780,33 @@ color: var(--black);
 
 /* ---------------------------------------ТАРИФЫ------------------------------------------------- */
 .section-trifi {
-  padding-top: 64px;
-  padding-bottom: 15px;
+padding: 60px 0 30px 0;
 }
 
 .subtitle-text-tarifi {
- margin-bottom: 15px;
+ margin-bottom: 12px;
 font-weight: 700;
-font-size: 32px;
-line-height: 110%;
+font-size: 28px;
+line-height: 100%;
 text-align: center;
 color: black;
 }
 
 .tarifi-dscr {
  text-align: center;
-
+margin-bottom: 24px;
 font-weight: 400;
 font-size: 16px;
-line-height: 140%;
+line-height: 115%;
 text-align: center;
-color: #fa201;
+color: black;
 }
 
 .tarifi-box {
   display: flex;
   flex-direction: column;
   gap: 30px;
-margin: 15px 0;
+margin-bottom: 24px;
 }
 
 .tarifi-card {
@@ -818,11 +817,12 @@ align-items: center;
 border-radius: 4px;
 padding: 14px 23px;
 width: 100%;
+min-height: 130px;
 background: #f9f2e5;
 margin: 0 auto;
 }
 
-.tarifi-icon {
+.tarifi-icon-box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -832,10 +832,14 @@ margin: 0 auto;
   background: #efa201;
 }
 
+.tarifi-icon {
+  width: fit-content;
+}
+
 .tarifi-text {
-width: 100%;
+width: 70%;
 font-weight: 700;
-font-size: 16px;
+font-size: 14px;
 line-height: 140%;
 color: black;
 }
@@ -844,7 +848,7 @@ color: black;
 display: block;
 font-weight: 600;
 font-size: 16px;
-line-height: 100%;
+line-height: 150%;
 letter-spacing: -0.02em;
 text-align: center;
 color: black;
@@ -938,8 +942,8 @@ margin-top: 65px;
 /* -------------------------------------СЕКЦИЯ ПРО CRM------------------------------------------------- */
 
 .section-crm {
-  padding-top: 15px;
-  padding-bottom: 64px;
+padding: 30px 0 60px 0
+;
 }
 
 .subtitle-crm {
