--- a/styles.css
+++ b/styles.css
@@ -445,7 +445,7 @@ width: 100%;
   font-size: 16px;
   border-radius: 12px;
   text-decoration: none;
-  margin-top: auto;
+ margin-top: 12px;
   align-self: flex-start;
 }
 /* --------------------------------------///СЕКЦИЯ ПЕРЕВАГИ----------------------------------- */
