--- a/styles.css
+++ b/styles.css
@@ -375,6 +375,10 @@ width: 100%;
   margin-right: 10px;
 }
 
+.perevagi-crm-card {
+margin-top: 24px;
+}
+
 .perevagi-track .perevagi-card:last-child {
   margin-right: 0;
 }
@@ -396,7 +400,7 @@ width: 100%;
 }
 
 .perevagi-card-text {
-  width: 85%; 
+
   font-weight: 400;
   font-size: 14px;
   line-height: 140%;
@@ -963,7 +967,7 @@ padding: 30px 0 60px 0
 .crm-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 12px;
 }
 
 .crm-box {
