--- a/styles.css
+++ b/styles.css
@@ -357,9 +357,12 @@ width: 100%;
 }
 
 .perevagi-track {
-  position: relative;
   display: flex;
-  transition: transform 0.4s ease;
+  transition: transform 0.3s ease-in-out;
+  will-change: transform;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
 }
 
 .perevagi-card {
@@ -373,6 +376,8 @@ width: 100%;
   flex-direction: column;
   justify-content: flex-start;
   margin-right: 10px;
+  flex: 0 0 auto;
+  scroll-snap-align: start;
 }
 
 .perevagi-crm-card {
@@ -444,7 +449,7 @@ margin-top: 24px;
   text-align: center;
   color: var(--white);
   font-size: 16px;
-
+width: 100%;
   border-radius: 12px;
   text-decoration: none;
  margin-top: 12px;
